Dont show URL in model list

--- a/src/views/chatPanel.html.mustache
+++ b/src/views/chatPanel.html.mustache
@@ -55,8 +55,8 @@
       <div class="composer-row">
         <select id="agent">
           {{#availableProviderModels}}
-            <option value="{{provider}}|{{baseUrl}}|{{model}}" {{#isSelected}}selected{{/isSelected}}>
-              {{provider}} • {{model}} ({{baseUrl}})
+            <option value="{{provider}}|{{model}}" {{#isSelected}}selected{{/isSelected}}>
+              {{provider}} • {{model}}
             </option>
           {{/availableProviderModels}}
         </select>
